run_dir/Si/run_dir/Si-model-CASTEP_ASE-test-surface_Si_diamond_111.txt
Model CASTEP_ASE, Test surface_Si_diamond_111
Test run at 2020-08-05 09:30

model file: /root/gits/testing-framework/run_dir/Si/run_dir/../models/CASTEP_ASE/model.py
============================================================
import os
from distutils import spawn

#from matscipy.socketcalc import CastepClient, SocketCalculator
from ase.calculators.castep import Castep

model_abs_dir = os.path.abspath(os.path.dirname(__file__))

mpirun = "mpirun"
mpirun_args = "-n 64"
castep = "castep.mpi"

os.environ['CASTEP_COMMAND'] = '{0} {1} {2}'.format(mpirun, mpirun_args, castep)

print os.environ['CASTEP_COMMAND']

name = 'CASTEP'
Castep.name = name
Castep.todict = lambda self: {}

no_checkpoint = True

def start(test_name):
    global calculator
    calculator = Castep(directory=test_name,
                        cut_off_energy=250,
                        spin_polarized=False,
                        opt_strategy='speed',
                        xc_functional='PW91',
                        elec_energy_tol='0.0000001',
                        max_scf_cycles=250,
                        fix_occupancy=False,
                        calculate_stress=True,
                        finite_basis_corr='automatic',
                        smearing_width='0.05',
                        fine_grid_scale=4,
                        mixing_scheme='pulay',
                        mix_history_length=20,
                        num_dump_cycles=0,
                        kpoints_mp_spacing='0.030', # note that other values were used for some tests, e.g. 0.015 for bulk E(V), 0.07 for minimization of GAP amorphous structures, and perhaps some other variations
                        species_pot = ("Si","{}/Si_OTF.usp".format(model_abs_dir)),
                        perc_extra_bands=200)

#                        symmetry_generate=False,
============================================================
test file: /root/gits/testing-framework/scripts/../tests/Si/surface_Si_diamond_111/test.py
============================================================
import os.path, surface

properties = surface.do_symmetric_surface(os.path.abspath(os.path.dirname(__file__)))
============================================================
Traceback (most recent call last):
  File "/root/gits/testing-framework/scripts/run-model-test.py", line 117, in <module>
    import model # import and run the current model
  File "/root/gits/testing-framework/run_dir/Si/run_dir/../models/CASTEP_ASE/model.py", line 15
    print os.environ['CASTEP_COMMAND']
           ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(os.environ['CASTEP_COMMAND'])?
